--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,31 @@
 # Python
+__pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
-__pycache__/
-*.egg-info/
-dist/
+env/
+venv/
+ENV/
 build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
 # Django
 *.log
+local_settings.py
 db.sqlite3
 db.sqlite3-journal
 /staticfiles/
@@ -18,6 +34,7 @@ db.sqlite3-journal
 # Environment variables
 .env
 .env.local
+.env.*.local
 
 # IDE
 .vscode/
@@ -30,8 +47,5 @@ db.sqlite3-journal
 .DS_Store
 Thumbs.db
 
-# Heroku
-*.env.heroku
-
-# Node (si vous utilisez npm)
-node_modules/
+# Cache de traduction (ne pas commit)
+translation_cache/
